test square root function

--- a/test/makefile
+++ b/test/makefile
@@ -3,6 +3,8 @@ all:
 	gcc -c ./*.cpp
 	#g++ ./person-test.cpp Person.o -o test.bin -fPIC -O2 -g -Wall -lpthread
 	g++ ./person-test.cpp Person.o /usr/local/lib/libgtest.a -o test.bin -fPIC -O2 -g -Wall -lpthread
+	g++ test_function.cpp /usr/local/lib/libgtest.a -o test_function -fPIC -O2 -g -Wall -lpthread
+
 
 clean:
 	rm *.o
